# submit_slurm_job

./: README.md  pyproject.toml  submit_slurm.py
submit_slurm/: __init__.py  submit_slurm.py
test/: context.py  test_submit.py
